common/applications/omada-controller-beta/extensions/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name omada-controller-web
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-home-muehlbachler-io
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: "${PUBLIC_IP}"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &domain omada.network.${LOCAL_HOME_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: *name
                port:
                  number: 80
  tls:
    - secretName: omada-controller-tls-cert
      hosts:
        - *domain
